test/parser/record/empty_record_error.exp
Error: Record must have at least one field
test/parser/record/empty_record_error.myte:3:8-15
 3 | val x = Foo { };
   |         ^^^^^^^